--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@ float:right;
   <a href="https://hmuneer.github.io/table-of-8/">Table Of 8</a>
   <a href="https://hmuneer.github.io/table-of-9/">Table Of 9</a>
   <a href="https://hmuneer.github.io/table-of-10/">Table Of 10</a>
-  <a href="#">Table Of 11</a>
-  <a href="#">Table Of 12</a>
-  <a href="#">Table Of 13</a>
-  <a href="#">Table Of 14</a>
-  <a href="#">Table Of 15</a>
-  <a href="#">Table Of 16</a>
-  <a href="#">Table Of 17</a>
-  <a href="#">Table Of 18</a>
-  <a href="#">Table Of 19</a>
-  <a href="#">Table Of 20</a>
+  <a href="https://hmuneer.github.io/Table-11/">Table Of 11</a>
+  <a href="https://hmuneer.github.io/table-12/">Table Of 12</a>
+  <a href="https://hmuneer.github.io/table-13/">Table Of 13</a>
+  <a href="https://hmuneer.github.io/table-14/">Table Of 14</a>
+  <a href="https://hmuneer.github.io/table-15/">Table Of 15</a>
+  <a href="https://hmuneer.github.io/table-16/">Table Of 16</a>
+  <a href="https://hmuneer.github.io/table-17/">Table Of 17</a>
+  <a href="https://hmuneer.github.io/table-18/">Table Of 18</a>
+  <a href="https://hmuneer.github.io/table-19/">Table Of 19</a>
+  <a href="https://hmuneer.github.io/table-20/">Table Of 20</a>
   <a href="#">Table Of 21</a>
   <a href="#">Table Of 22</a>
   <a href="#">Table Of 23</a>
@@ -253,10 +253,10 @@ float:right;
 		<td class="black">200</td>
 	</tr>
 </table>
-<a class="Pre" href="">Previous</a>
+<a class="Pre" href="https://hmuneer.github.io/table-19/">Previous</a>
 
 
-<a class="next" href="">Next</a>
+<a class="next" href="https://hmuneer.github.io/table.1.1/">Next</a>
 <script>
 function openNav() {
 document.getElementById("myNav").style.width = "100%";
